Update Java to version 16